gcc/testsuite/gm2/iso/fail/badparamarray.def
DEFINITION MODULE badparamarray ;

PROCEDURE foo (a: ARRAY OF CHAR) ;

END badparamarray.
